[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "btcscripy"
version = "0.0.1"
authors = [
  { name="kchro3", email="jhara1418@gmail.com" },
]
description = "Python implementation of Bitcoin script"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/kchro3/bitcoin-script-py"
"Bug Tracker" = "https://github.com/kchro3/bitcoin-script-py/issues"
